--- a/myface-onface-html/src/views/block/_footer.html
+++ b/myface-onface-html/src/views/block/_footer.html
@@ -1,4 +1,45 @@
 <!--footer-->
-<footer class="text-center">
-  footer
+<footer class="main-footer">
+	<!--footer-row-1-->
+  <div class="container footer-row-1">
+    <div class="row">
+    	<div class="col-md-3 f-block-1">
+    		<p>Hello, my name is Le Phan ( you can call me Black) and I'm from HCM city, Vietnam. I'm just the person have a little bit of knowledge about html, css, javascript.</p>
+    	</div>
+    	<div class="col-md-2 f-block-2">
+    		<ul class="list-group">
+  			  <li class="list-group-item">Cras justo odio</li>
+  			  <li class="list-group-item">Dapibus ac facilisis in</li>
+  			  <li class="list-group-item">Morbi leo risus</li>
+  			  <li class="list-group-item">Porta ac consectetur ac</li>
+  			  <li class="list-group-item">Vestibulum at eros</li>
+  			</ul>
+    	</div>
+    	<div class="col-md-2 f-block-3">
+    		<ul class="list-group">
+  			  <li class="list-group-item">Cras justo odio</li>
+  			  <li class="list-group-item">Dapibus ac facilisis in</li>
+  			  <li class="list-group-item">Morbi leo risus</li>
+  			  <li class="list-group-item">Porta ac consectetur ac</li>
+  			  <li class="list-group-item">Vestibulum at eros</li>
+  			</ul>
+    	</div>
+    	<div class="col-md-2 f-block-4">
+    		<ul class="list-group">
+  			  <li class="list-group-item">Cras justo odio</li>
+  			  <li class="list-group-item">Dapibus ac facilisis in</li>
+  			  <li class="list-group-item">Morbi leo risus</li>
+  			  <li class="list-group-item">Porta ac consectetur ac</li>
+  			  <li class="list-group-item">Vestibulum at eros</li>
+  			</ul>
+    	</div>
+    	<div class="col-md-3 f-block-5">
+    		<p>Hello, my name is Le Phan ( you can call me Black) and I'm from HCM city, Vietnam. I'm just the person have a little bit of knowledge about html, css, javascript.</p>
+    	</div>
+    </div>
+  </div><!--footer-row-1-->
+  <!--footer-row-2-->
+  <div class="container footer-row-2">
+    <p class="f-address">Hello, my name is Le Phan ( you can call me Black) and I'm from HCM city, Vietnam. I'm just the person have a little bit of knowledge about html, css, javascript.</p>
+  </div><!--/.footer-row-2-->
 </footer><!--/.footer-->
