--- a/myface-onface-html/src/assets/less/style/block/footer.less
+++ b/myface-onface-html/src/assets/less/style/block/footer.less
@@ -1,24 +1,41 @@
-footer {
-	width: 100%;
-	padding: 20px 0;
-	position: relative;
-	color: @text-color-3;
-	&:before {
-		content: "";
-		width: 58px;
-		height: 1px;
-		background-color: @line-color-2;
-		position: absolute;
-		top: 0;
-		left: 50%;
-		margin-left: -29px;
+footer{ 
+	&.text-center {
+		width: 100%;
+		padding: 20px 0;
+		position: relative;
+		color: @text-color-3;
+		&:before {
+			content: "";
+			width: 58px;
+			height: 1px;
+			background-color: @line-color-2;
+			position: absolute;
+			top: 0;
+			left: 50%;
+			margin-left: -29px;
+		}
+		p {
+			margin: 0 0;
+		}
+		a {
+			display: inline-block;
+			text-decoration: underline;
+		}
 	}
-	p {
-		margin: 0 0;
-	}
-	a {
-		display: inline-block;
-		text-decoration: underline;
+	//footer myface-shop
+	&.main-footer {
+		width: 100%;
+		float: left;
+		margin-top: 30px;
+		.footer-row-1 {
+			padding: 30px 0;
+			border-top: @border;
+			border-bottom: @border;
+		}
+		.footer-row-2 {
+			margin: 20px auto 10px;
+			text-align: center;
+		}
 	}
 }
 .footer-link-1 {
