--- a/myface-onface-html/src/assets/less/style/page/myface-shop.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-shop.less
@@ -1,12 +1,241 @@
+.myface-shop {
+	width: 100%;
+	height: 100%;
+	header {
+		margin-bottom: 20px;
+	}
+}
+.wrap-banner {
+	height: 415px;
+	margin-bottom: 15px;
+	.banner-item {
+		border: 1px solid #dfdfdf;
+		border-radius: @border-radius;
+		overflow: hidden;
+		img {
+			width: 100%;
+			min-height: 100%;
+			border-radius: @border-radius;
+		}
+	}
+}
+.banner-left {
+	width: 855px;
+}
+.banner-right {
+	width: 315px;
+	padding-left: 0;
+}
+.banner-1 {
+	height: 415px;
+}
+.banner-2 {
+	height: 250px;
+}
+.banner-3 {
+	height: 150px;
+	margin-top: 15px;
+}
+.tabs-bar {
+  width: 100%;
+  height: 50px;
+  margin-bottom: 40px; 
+  border-bottom: 1px solid #e5e5e5;
+  background: rgba(255,255,255,0.6);
+  ul {
+  	list-style: none;
+  }
+}
+.tabs-menu {
+	text-align: center;
+	padding: 0;
+	margin: 0 auto;
+}
+.tab-item {
+	position: relative;
+  display: inline-block;
+  margin: 0;
+  padding-left: 12px;
+  padding-right: 12px;
+  font-size: 14px;
+  > a {
+  	padding: 15px 0;
+  	float: left;
+  	line-height: 20px;
+  	color: @text-color-1;
+		&:hover {
+			color: @primary-color;
+		}
+  	&:after {
+			content: "\f0d7";
+	    width: 15px;
+	    height: 15px;
+	    display: inline-block;
+	    font: normal normal normal 14px/1 FontAwesome;
+	    font-size: 14px;
+	    text-align: right;
+		}
+  }
+  &:hover {
+  	.tab-sub {
+  		display: block;
+  		background-color: #fff;
+  	}
+  }
+}
+.tab-sub {
+	display: none;
+	width: 200px;
+	position: absolute;
+	top: 90%;
+	left: 0;
+	z-index: 99;
+	margin: 0;
+	padding: 0;
+	text-align: left;
+}
+.wrap-product {
+	float: left;
+}
 .m-product-list {
 	width: 100%;
 	margin: 0;
 	padding: 0;
 	list-style: none;
 	h2 {
-		font-size: 15px;
+		font-weight: 600;
+		font-size: 16px;
+	}
+}
+.m-product-item {
+	margin-bottom: 20px;
+	border-radius: @border-radius;
+}
+.m-product-inner {
+	width: 100%;
+	position: relative;
+	background-color: transparent;
+}
+.m-product-info {
+	width: 100%;
+	height: 200px;
+	border-radius: @border-radius;
+	border: 1px solid #eee;
+	padding: 10px 10px 35px;
+	position: relative;
+	overflow: hidden;
+	background-color: #fff;
+	&:hover {
+		.m-product-hover {
+			opacity: 1;
+	    -webkit-transition: opacity 500ms ease;
+	    -moz-transition: opacity 500ms ease;
+	    -ms-transition: opacity 500ms ease;
+	    -o-transition: opacity 500ms ease;
+	    transition: opacity 500ms ease;
+	  }
+	  .icon-links {
+	  	li {
+	  		color: #fff;
+	  	}
+	  }
 	}
 }
 .m-product-img {
 	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	img {
+		width: 100%;
+		min-height: 100%;
+	}
+}
+.m-product-hover {
+	opacity: 0;
+  filter: alpha(opacity=0);
+	width: 100%;
+	height: 100%;
+	border-radius: @border-radius;
+	padding: 10px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	background-color: rgba(255, 86, 33, 1);
+	color: #fff;
+	.price {
+		&.current {
+			font-weight: 600;
+			color: #fff;
+		}
+		&.original {
+			color: #fff;
+		}
+	}
+}
+.icon-links {
+	width: auto;
+	height: 30px;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	z-index: 2;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	background-color: transparent;
+	li {
+		color: @text-color-2;
+		margin-right: 20px;
+		display: inline-block;
+		text-align: right;
+		line-height: 30px;
+		.icon {
+			&:before {
+				width: auto;
+				margin-right: 5px;
+			}
+		}
+	}
+}
+.icon {
+	&:before {
+		content: "";
+    width: 15px;
+    height: 15px;
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: 14px;
+    text-align: left;
+	}
+	&.i-buy {
+		&:before {
+  		content: "\f02b";
+  	}
+  }
+  &.i-view {
+  	&:before {
+  		content: "\f06e";
+  	}
+  }
+  &.i-like {
+  	&:before {
+  		content: "\f087";
+  	}
+  }
+}
+.shop-name {
+	width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+	margin: 0;
+	padding: 10px 0;
+	text-transform: capitalize;
+}
+.btn-loadmore {
+	width: 340px;
+	height: 40px;
+	padding-top: 9px;
+	padding-bottom: 9px;
 }
