--- a/myface-onface-html/src/views/block/_header.html
+++ b/myface-onface-html/src/views/block/_header.html
@@ -1,3 +1,151 @@
 <header>
-	
+	<!--header-row-1-->
+	<div class="container header-row-1">
+		<div class="row">
+			<nav class="navbar">
+		    <div class="col-md-2 myfaceshop-logo">
+					<a href="index.html" title="myFace Shop">
+						<h1 class="logo-text">
+							<img class="" src="assets/images/logo/logo.png" alt="myface">	
+						</h1>
+					</a>
+				</div>
+
+		    <div class="col-md-7 search-nav">
+		      <div class="input-group header-search">
+						<div class="input-group-btn">
+							<select class="selectpicker cate-search">
+								<option>Tất cả</option>
+								<option>Danh mục 1</option>
+								<option>Danh mục 2</option>
+								<option>Danh mục 3</option>
+								<option>Danh mục 5</option>
+							</select> 
+						</div>
+						<input aria-label="..." class="form-control input-search" placeholder="Tìm sản phẩm bạn quan tâm" type="text">
+						<div class="input-group-btn">
+							<button class="btn btn-default btn-search"></button>
+						</div>
+					</div>
+		    </div>
+
+		    <div class="col-md-3 account-nav">
+		    	<ul class="nav navbar-nav">
+		        <li class="dropdown account-block">
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+		          	<div class="account-img">
+		          		<img src="assets/images/upload/user/user-1.jpg" class="acc-image img-circle" alt="myface">
+		          	</div>
+		          	<div class="account-label">
+                  <span class="account-label-1" data-original-title="" title="">Natalie Berowska</span>
+                  <span class="account-label-2" data-placement="bottom" title="" data-original-title="Cấu hình &amp; quản lý tài khoản">Theo dõi đơn hàng</span>
+              	</div>
+		          </a>
+		          <ul class="dropdown-menu account-dropdown">
+		            <li><a href="#">blacksnow</a></li>
+		            <li><a href="#">blacksnow</a></li>
+		            <li><a href="#">blacksnow</a></li>
+		          </ul>
+		        </li>
+		        <!--cart-block-->
+		        <li class="cart-block">
+		        	<a class="cart-link" href="cart.html" data-placement="bottom" title="" data-original-title="Giỏ hàng của bạn">
+		        		<span class="cart-number">0</span>
+		        	</a>
+		        </li>
+		      </ul>
+		    </div>
+			</nav>
+		</div>
+	</div><!--/.header-row-1-->
+	<!--header-row-2-->
+	<div class="header-row-2">
+		<nav class="container navbar category-nav">
+			<ul class="nav navbar-nav cate-list">
+			  <li class="cate-item">
+			    <a class="" href="#">
+			    	<span class="cate-icon">
+			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
+			    	</span>
+			    	<span class="cate-name">Mỹ phẩm</span>
+			    </a>
+			  </li>
+			  <li class="cate-item">
+			    <a class="" href="#">
+			    	<span class="cate-icon">
+			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
+			    	</span>
+			    	<span class="cate-name">Điện tử</span>
+			    </a>
+			  </li>
+			  <li class="cate-item">
+			    <a class="" href="#">
+			    	<span class="cate-icon">
+			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
+			    	</span>
+			    	<span class="cate-name">Thời trang</span>
+			    </a>
+			  </li>
+			  <li class="cate-item">
+			    <a class="" href="#">
+			    	<span class="cate-icon">
+			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
+			    	</span>
+			    	<span class="cate-name">Gia dụng</span>
+			    </a>
+			  </li>
+			  <li class="cate-item">
+			    <a class="" href="#">
+			    	<span class="cate-icon">
+			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
+			    	</span>
+			    	<span class="cate-name">Sức khỏe</span>
+			    </a>
+			  </li>
+			  <li class="cate-item">
+			    <a class="" href="#">
+			    	<span class="cate-icon">
+			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
+			    	</span>
+			    	<span class="cate-name">Thực phẩm</span>
+			    </a>
+			  </li>
+			  <li class="cate-item">
+			    <a class="" href="#">
+			    	<span class="cate-icon">
+			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
+			    	</span>
+			    	<span class="cate-name">Sách - VPP</span>
+			    </a>
+			  </li>
+			  <li class="cate-item">
+			    <a class="" href="#">
+			    	<span class="cate-icon">
+			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
+			    	</span>
+			    	<span class="cate-name">Mẹ & Bé</span>
+			    </a>
+			  </li>
+			  <li class="cate-item">
+			    <a class="" href="#">
+			    	<span class="cate-icon">
+			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
+			    	</span>
+			    	<span class="cate-name">Đồ chơi</span>
+			    </a>
+			  </li>
+			</ul>
+			<ul class="nav navbar-nav promotion-list">
+        <li>
+        	<a href="#">Promotion</a>
+        </li>
+        <li>
+        	<a href="#">Promotion</a>
+        </li>
+        <li>
+        	<a href="#">Promotion</a>
+        </li>
+      </ul>
+		</nav>
+	</div><!--/.header-row-2-->
 </header>
