--- a/myface-onface-html/src/views/index.html
+++ b/myface-onface-html/src/views/index.html
@@ -1,15 +1,31 @@
-{% extends "layout/_layout-base.html" %}
+{% extends "layout/_layout-myface-shop.html" %}
 {% block page-container %}
-<main>
+<main class="container">
 	<!--wrap-banner-->
-	<div class="wrap-banner">
+	<div class="row wrap-banner">
+		<!--banner-left-->
+		<div class="col-md-9 banner-left">
+			<div class="banner-item banner-1">
+				<img src="assets/images/upload/banner/banner-2.jpg" alt="myface">
+			</div>
+		</div><!--/.banner-left-->
+
+		<!--banner-right-->
+		<div class="col-md-3 banner-right">
+			<div class="banner-item banner-2">
+				<img src="assets/images/upload/banner/banner-2.jpg" alt="myface">
+			</div><!--/.banner-2-->
+			<div class="banner-item banner-3">
+				<img src="assets/images/upload/banner/banner-2.jpg" alt="myface">
+			</div><!--/.banner-3-->
+		</div><!--/.banner-right-->
 	</div>
 	<!--tabs-bar-->
-  <nav class="full-width tabs-bar">
-  	<ul class="shot-menu">
-      <li class="tab-item active">
+  <nav class="navbar tabs-bar">
+  	<ul class="tabs-menu">
+      <li class="tab-item">
       	<a href="#">Nổi bật</a>
-      	<ul class="sub">
+      	<ul class="dropdown-menu tab-sub">
       		<li><a href="#">Nổi bật 1</a></li>
       		<li><a href="#">Nổi bật 2</a></li>
       		<li><a href="#">Nổi bật 3</a></li>
@@ -17,7 +33,7 @@
       </li>
       <li class="tab-item">
       	<a href="#">Sản phẩm</a>
-      	<ul class="sub">
+      	<ul class="dropdown-menu tab-sub">
       		<li><a href="#">Sản phẩm 1</a></li>
       		<li><a href="#">Sản phẩm 2</a></li>
       		<li><a href="#">Sản phẩm 3</a></li>
@@ -25,7 +41,7 @@
       </li>
       <li class="tab-item">
       	<a href="#">Gần đây</a>
-      	<ul class="sub">
+      	<ul class="dropdown-menu tab-sub">
       		<li><a href="#">Gần đây 1</a></li>
       		<li><a href="#">Gần đây 2</a></li>
       		<li><a href="#">Gần đây 3</a></li>
@@ -36,38 +52,140 @@
   <!--wrap-product-->
   <div class="row wrap-product">
 	  <ol class="m-product-list">
-	  	<li class="col-md-3 m-product-item">
-	  		<div class="m-product-info">
-	  			<a class="m-product-link" href="#">
-	  				<figure class="hover-effect">
-							<img class="m-product-img" src="assets/images/upload/product/product.jpg" alt="myface">
-							<figcaption>
-								<h2>Áo Sơ Mi Nam Dáng Ôm màu xanh dương</h2>
-								<p class="m-product-description">Sử dụng chất liệu cao cấp cùng kiểu dáng hiện đại, áo sơ mi slim fit vạt bầu đem lại nét thanh lịch, sang trọng cho phái mạnh khi ...</p>
+	  	{% for x in [1,2,3,4,5,7,8,9,10,11] %}  
+	  	<!--m-product-item-->
+	  	<li class="col-xs-12 col-sm-4 col-md-3 m-product-item">
+	  		<div class="m-product-inner">
+		  		<div class="m-product-info">
+		  			<a class="m-product-link" href="#">
+		  				<figure class="m-product-img">
+								<img class="" src="assets/images/upload/product/product-5.jpg" alt="myface">		
+							</figure>
+							<div class="m-product-hover">
+								<h2 class="m-product-name">Áo thun Jeanswest bêđê hồng</h2>
+								<p class="m-product-description">Áo thun jeanswest màu trắng hồng bêdê. Kiểu dáng đẹp, ôm bó sát người. Đặc biệt bên trong có lớp lưới giúp thoáng mát...</p>
 								<div class="price-block">
 		              <span class="price current">235.000<sup>đ</sup></span>
 		              <span class="price original">325.000<sup>đ</sup></span> 
 		            </div>
-							</figcaption>			
-						</figure>
-	  			</a>
-					<ul class="icon-links">
-						<li class="m-buy" href="#"><span class="icon i-buy">123</span></li>
-						<li class="m-view" href="#"><span class="icon i-view">456</span></li>
-						<li class="m-like" href="#"><span class="icon i-like">789</span></li>
-					</ul>
-	  		</div>
-	  		<h2 class="shop-name">
-	  			<a class="shop-name-inner" href="#">
-	  				<img src="assets/images/upload/shop-img/user.jpg" alt="myface">
-	  				<span>saigon serect fashion</span>
-	  			</a>
-	  		</h2>
-	  	</li>
+							</div>	
+		  			</a>
+						<ul class="icon-links">
+							<li class="m-buy" href="#"><span class="icon i-buy">123</span></li>
+							<li class="m-view" href="#"><span class="icon i-view">456</span></li>
+							<li class="m-like" href="#"><span class="icon i-like">789</span></li>
+						</ul>
+		  		</div>
+		  		<h2 class="shop-name">
+		  			<a class="shop-name-inner" href="#">
+		  				<img src="assets/images/upload/shop-img/user.jpg" alt="myface">
+		  				<span>Elite Shop</span>
+		  			</a>
+		  		</h2>
+		  	</div>
+	  	</li><!--/.m-product-item-->
+	  	<!--m-product-item-->
+	  	<li class="col-xs-12 col-sm-4 col-md-3 m-product-item">
+	  		<div class="m-product-inner">
+		  		<div class="m-product-info">
+		  			<a class="m-product-link" href="#">
+		  				<figure class="m-product-img">
+								<img class="" src="assets/images/upload/product/product-6.jpg" alt="myface">		
+							</figure>
+							<div class="m-product-hover">
+								<h2 class="m-product-name">Áo thun Jeanswest bêđê hồng</h2>
+								<p class="m-product-description">Áo thun jeanswest màu trắng hồng bêdê. Kiểu dáng đẹp, ôm bó sát người. Đặc biệt bên trong có lớp lưới giúp thoáng mát...</p>
+								<div class="price-block">
+		              <span class="price current">235.000<sup>đ</sup></span>
+		              <span class="price original">325.000<sup>đ</sup></span> 
+		            </div>
+							</div>	
+		  			</a>
+						<ul class="icon-links">
+							<li class="m-buy" href="#"><span class="icon i-buy">123</span></li>
+							<li class="m-view" href="#"><span class="icon i-view">456</span></li>
+							<li class="m-like" href="#"><span class="icon i-like">789</span></li>
+						</ul>
+		  		</div>
+		  		<h2 class="shop-name">
+		  			<a class="shop-name-inner" href="#">
+		  				<img src="assets/images/upload/shop-img/user.jpg" alt="myface">
+		  				<span>Bags Bags Shop</span>
+		  			</a>
+		  		</h2>
+		  	</div>
+	  	</li><!--/.m-product-item-->
+	  	<!--m-product-item-->
+	  	<li class="col-xs-12 col-sm-4 col-md-3 m-product-item">
+	  		<div class="m-product-inner">
+		  		<div class="m-product-info">
+		  			<a class="m-product-link" href="#">
+		  				<figure class="m-product-img">
+								<img class="" src="assets/images/upload/product/product-7.jpg" alt="myface">		
+							</figure>
+							<div class="m-product-hover">
+								<h2 class="m-product-name">Áo thun Jeanswest bêđê hồng</h2>
+								<p class="m-product-description">Áo thun jeanswest màu trắng hồng bêdê. Kiểu dáng đẹp, ôm bó sát người. Đặc biệt bên trong có lớp lưới giúp thoáng mát...</p>
+								<div class="price-block">
+		              <span class="price current">235.000<sup>đ</sup></span>
+		              <span class="price original">325.000<sup>đ</sup></span> 
+		            </div>
+							</div>	
+		  			</a>
+						<ul class="icon-links">
+							<li class="m-buy" href="#"><span class="icon i-buy">123</span></li>
+							<li class="m-view" href="#"><span class="icon i-view">456</span></li>
+							<li class="m-like" href="#"><span class="icon i-like">789</span></li>
+						</ul>
+		  		</div>
+		  		<h2 class="shop-name">
+		  			<a class="shop-name-inner" href="#">
+		  				<img src="assets/images/upload/shop-img/user.jpg" alt="myface">
+		  				<span>Home Venten Korean</span>
+		  			</a>
+		  		</h2>
+		  	</div>
+	  	</li><!--/.m-product-item-->
+	  	<!--m-product-item-->
+	  	<li class="col-xs-12 col-sm-4 col-md-3 m-product-item">
+	  		<div class="m-product-inner">
+		  		<div class="m-product-info">
+		  			<a class="m-product-link" href="#">
+		  				<figure class="m-product-img">
+								<img class="" src="assets/images/upload/product/product-8.jpg" alt="myface">		
+							</figure>
+							<div class="m-product-hover">
+								<h2 class="m-product-name">Áo thun Jeanswest bêđê hồng</h2>
+								<p class="m-product-description">Áo thun jeanswest màu trắng hồng bêdê. Kiểu dáng đẹp, ôm bó sát người. Đặc biệt bên trong có lớp lưới giúp thoáng mát...</p>
+								<div class="price-block">
+		              <span class="price current">235.000<sup>đ</sup></span>
+		              <span class="price original">325.000<sup>đ</sup></span> 
+		            </div>
+							</div>	
+		  			</a>
+						<ul class="icon-links">
+							<li class="m-buy" href="#"><span class="icon i-buy">123</span></li>
+							<li class="m-view" href="#"><span class="icon i-view">456</span></li>
+							<li class="m-like" href="#"><span class="icon i-like">789</span></li>
+						</ul>
+		  		</div>
+		  		<h2 class="shop-name">
+		  			<a class="shop-name-inner" href="#">
+		  				<img src="assets/images/upload/shop-img/user.jpg" alt="myface">
+		  				<span>mau hem</span>
+		  			</a>
+		  		</h2>
+		  	</div>
+	  	</li><!--/.m-product-item-->
+	  	{% endfor %}
 	  </ol>
   </div><!--/.wrap-product-->
+  <!--loading-->
+  <div class="loading">
+  </div>
+  <!--load-more-->
   <div class="full-width load-more">
-	  <button class="btn btn-primary btn-loadmore">Xem thêm đi - không tốn tiền mà</button>
+	  <button class="btn btn-primary btn-loadmore">Xem thêm các sản phẩm khác </button>
 	</div>
   <!--back-to-top-btn-->
   <div class="back-to-top-btn" style="display: none;">
