--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -29,6 +29,7 @@
 @import "block/footer.less";
 @import "block/product-info-block.less";
 @import "block/invoice.less";
+@import "block/m-product-block.less";
 //PAGES
 //------
 @import "page/product-onface.less";
