--- a/myface-onface-html/src/assets/less/style/block/header.less
+++ b/myface-onface-html/src/assets/less/style/block/header.less
@@ -100,10 +100,16 @@
 					padding: 0 15px;
 				}
 			}
-			> a {
+			> a,
+			.invoice-tracking {
 				color: @text-color-1;
-				&:hover {
+				&:hover,
+				&:focus:hover {
 					color: @primary-color;
+					background-color: transparent;
+				}
+				&:focus {
+					color: @text-color-1;
 					background-color: transparent;
 				}
 			}
@@ -142,9 +148,17 @@
 	    text-align: right;
 		}
 	}
-	.account-label-2 {
-		font-size: 12px;
-	}
+}
+.invoice-tracking {
+	padding: 0 !important;
+	display: inline-block !important;
+	line-height: 1;
+	position: absolute;
+	bottom: 3px;
+	right: 0;
+}
+.account-label-2 {
+	font-size: 12px;
 }
 .cart-block {
 	width: 67px;
@@ -174,6 +188,7 @@
 .header-row-2 {
 	width: 100%;
 	height: 70px;
+	overflow: hidden;
 	background-color: #f2f2f2;
 }
 .cate-list {
@@ -186,20 +201,145 @@
 				display: block;
 				text-align: center;
 			}
-		}
-		.cate-icon {
-			height: 32px;
-			img {
-				max-height: 100%;
+			&:hover {
+				background-color: @primary-color;
+				.cate-name {
+					font-weight: 600;
+					color: #fff;
+				}
 			}
 		}
 		.cate-name {
 			font-weight: 600;
-
+			color: @text-color-2;
+		}
+	}
+}
+.cate-icon {
+	width: 100%;
+  height: 30px;
+  margin-bottom: 2px;
+  background: url(../images/icons/cate-icon/1.png) no-repeat center center;
+  background-size: auto 100%;
+}
+.cate-item {
+	> a {
+		&:hover {
+			.cate-icon {
+				background: url(../images/icons/cate-icon/1-hover.png) no-repeat center center;
+			}
+		}
+	}
+	&.cate-2 {
+		.cate-icon {
+			background: url(../images/icons/cate-icon/2.png) no-repeat center center;
+		}
+		> a {
+			&:hover {
+				.cate-icon {
+					background: url(../images/icons/cate-icon/2-hover.png) no-repeat center center;
+				}
+			}
+		}
+	}
+	&.cate-3 {
+		.cate-icon {
+			background: url(../images/icons/cate-icon/3.png) no-repeat center center;
+		}
+		> a {
+			&:hover {
+				.cate-icon {
+					background: url(../images/icons/cate-icon/3-hover.png) no-repeat center center;
+				}
+			}
+		}
+	}
+	&.cate-4 {
+		.cate-icon {
+			background: url(../images/icons/cate-icon/4.png) no-repeat center center;
+		}
+		> a {
+			&:hover {
+				.cate-icon {
+					background: url(../images/icons/cate-icon/4-hover.png) no-repeat center center;
+				}
+			}
+		}
+	}
+	&.cate-5 {
+		.cate-icon {
+			background: url(../images/icons/cate-icon/5.png) no-repeat center center;
+		}
+		> a {
+			&:hover {
+				.cate-icon {
+					background: url(../images/icons/cate-icon/5-hover.png) no-repeat center center;
+				}
+			}
+		}
+	}
+	&.cate-6 {
+		.cate-icon {
+			background: url(../images/icons/cate-icon/6.png) no-repeat center center;
+		}
+		> a {
+			&:hover {
+				.cate-icon {
+					background: url(../images/icons/cate-icon/6-hover.png) no-repeat center center;
+				}
+			}
+		}
+	}
+	&.cate-7 {
+		.cate-icon {
+			background: url(../images/icons/cate-icon/7.png) no-repeat center center;
+		}
+		> a {
+			&:hover {
+				.cate-icon {
+					background: url(../images/icons/cate-icon/7-hover.png) no-repeat center center;
+				}
+			}
+		}
+	}
+	&.cate-8 {
+		.cate-icon {
+			background: url(../images/icons/cate-icon/8.png) no-repeat center center;
+		}
+		> a {
+			&:hover {
+				.cate-icon {
+					background: url(../images/icons/cate-icon/8-hover.png) no-repeat center center;
+				}
+			}
+		}
+	}
+	&.cate-9 {
+		.cate-icon {
+			background: url(../images/icons/cate-icon/9.png) no-repeat center center;
+		}
+		> a {
+			&:hover {
+				.cate-icon {
+					background: url(../images/icons/cate-icon/9-hover.png) no-repeat center center;
+				}
+			}
 		}
 	}
 }
 .promotion-list {
 	float: right;
 	margin-right: -15px;
+}
+.navbar-nav > li.promotion-item {
+	border-right: @border;
+	> a {
+		line-height: 38px;
+		&:hover {
+			background-color: #c8c8c8;
+		}
+	}
+	&:last-child {
+		border-right: 0;
+	}
 }
