--- a/myface-onface-html/src/assets/less/style/core.less
+++ b/myface-onface-html/src/assets/less/style/core.less
@@ -109,7 +109,30 @@ img {
   float: left;
 }
 .load-more {
-  margin: 20px 0;
+  margin: 25px 0;
   text-align: center;
 }
-
+//animation
+.slide-right {
+  display: inline-block;
+  position: relative;
+  > * {
+    position: relative;
+  }
+  &:before {
+    box-sizing: border-box;
+    transition: 0.5s;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: @primary-color;
+  }
+  &:hover {
+    &:before {
+      width: 100%;
+    }
+  }
+}
