--- a/myface-onface-html/src/views/block/_header.html
+++ b/myface-onface-html/src/views/block/_header.html
@@ -38,7 +38,6 @@
 		          	</div>
 		          	<div class="account-label">
                   <span class="account-label-1" data-original-title="" title="">Natalie Berowska</span>
-                  <span class="account-label-2" data-placement="bottom" title="" data-original-title="Cấu hình &amp; quản lý tài khoản">Theo dõi đơn hàng</span>
               	</div>
 		          </a>
 		          <ul class="dropdown-menu account-dropdown">
@@ -46,6 +45,9 @@
 		            <li><a href="#">blacksnow</a></li>
 		            <li><a href="#">blacksnow</a></li>
 		          </ul>
+		          <a class="invoice-tracking" href="#">
+		          	<span class="account-label-2" data-placement="bottom" title="" data-original-title="Cấu hình &amp; quản lý tài khoản">Theo dõi đơn hàng</span>
+		          </a>
 		        </li>
 		        <!--cart-block-->
 		        <li class="cart-block">
@@ -62,88 +64,85 @@
 	<div class="header-row-2">
 		<nav class="container navbar category-nav">
 			<ul class="nav navbar-nav cate-list">
-			  <li class="cate-item">
+			  <li class="cate-item cate-1">
 			    <a class="" href="#">
 			    	<span class="cate-icon">
-			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
 			    	</span>
 			    	<span class="cate-name">Mỹ phẩm</span>
 			    </a>
 			  </li>
-			  <li class="cate-item">
+			  <li class="cate-item cate-2">
 			    <a class="" href="#">
 			    	<span class="cate-icon">
-			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
 			    	</span>
 			    	<span class="cate-name">Điện tử</span>
 			    </a>
 			  </li>
-			  <li class="cate-item">
+			  <li class="cate-item cate-3">
 			    <a class="" href="#">
 			    	<span class="cate-icon">
-			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
 			    	</span>
 			    	<span class="cate-name">Thời trang</span>
 			    </a>
 			  </li>
-			  <li class="cate-item">
+			  <li class="cate-item cate-4">
 			    <a class="" href="#">
 			    	<span class="cate-icon">
-			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
 			    	</span>
 			    	<span class="cate-name">Gia dụng</span>
 			    </a>
 			  </li>
-			  <li class="cate-item">
+			  <li class="cate-item cate-5">
 			    <a class="" href="#">
 			    	<span class="cate-icon">
-			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
 			    	</span>
 			    	<span class="cate-name">Sức khỏe</span>
 			    </a>
 			  </li>
-			  <li class="cate-item">
+			  <li class="cate-item cate-6">
 			    <a class="" href="#">
 			    	<span class="cate-icon">
-			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
 			    	</span>
 			    	<span class="cate-name">Thực phẩm</span>
 			    </a>
 			  </li>
-			  <li class="cate-item">
+			  <li class="cate-item cate-7">
 			    <a class="" href="#">
 			    	<span class="cate-icon">
-			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
 			    	</span>
 			    	<span class="cate-name">Sách - VPP</span>
 			    </a>
 			  </li>
-			  <li class="cate-item">
+			  <li class="cate-item cate-8">
 			    <a class="" href="#">
 			    	<span class="cate-icon">
-			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
 			    	</span>
 			    	<span class="cate-name">Mẹ & Bé</span>
 			    </a>
 			  </li>
-			  <li class="cate-item">
+			  <li class="cate-item cate-9">
 			    <a class="" href="#">
 			    	<span class="cate-icon">
-			    		<img src="assets/images/upload/cate-icons/mp.png" class="" alt="myface">
 			    	</span>
 			    	<span class="cate-name">Đồ chơi</span>
 			    </a>
 			  </li>
 			</ul>
 			<ul class="nav navbar-nav promotion-list">
-        <li>
-        	<a href="#">Promotion</a>
+        <li class="promotion-item promotion-1">
+        	<a href="#">
+        		<img src="assets/images/upload/pro/pro-1.png" class="" alt="myface">
+        	</a>
         </li>
-        <li>
-        	<a href="#">Promotion</a>
+        <li class="promotion-item promotion-2">
+        	<a href="#">
+        		<img src="assets/images/upload/pro/pro-2.png" class="" alt="myface">
+        	</a>
         </li>
-        <li>
-        	<a href="#">Promotion</a>
+        <li class="promotion-item promotion-3">
+        	<a href="#">
+        		<img src="assets/images/upload/pro/pro-3.png" class="" alt="myface">
+        	</a>
         </li>
       </ul>
 		</nav>
