--- a/myface-onface-html/src/assets/less/style/block/footer.less
+++ b/myface-onface-html/src/assets/less/style/block/footer.less
@@ -55,8 +55,9 @@ footer{
 			}
 		}
 		.footer-row-2 {
-			margin: 20px auto 10px;
-			text-align: center;
+			font-size: 13px;
+			margin: 14px auto;
+			text-align: left;
 			line-height: 22px;
 			color: @text-color-1;
 			p {
@@ -112,4 +113,9 @@ footer{
 }
 .footer-link-2 {
 	border-color: @orange;
+}
+.readmore {
+	color: @text-color-2;
+	text-decoration: underline;
+	font-weight: bold;
 }
