--- a/myface-onface-html/src/assets/less/style/page/myface-shop.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-shop.less
@@ -89,6 +89,7 @@
   	float: left;
   	line-height: 20px;
   	color: @text-color-1;
+  	font-weight: 600;
 		&:hover {
 			color: @primary-color;
 		}
@@ -124,8 +125,15 @@
 	float: left;
 }
 .btn-loadmore {
-	width: 340px;
+	width: 500px;
 	height: 40px;
 	padding-top: 9px;
 	padding-bottom: 9px;
+	border-color: #dfdfdf;
+	color: @text-color-2;
+	background-color: transparent;
+	&:hover {
+		color: #fff;
+		background-color: @primary-color;
+	}
 }
