--- a/myface-onface-html/src/views/block/_header.html
+++ b/myface-onface-html/src/views/block/_header.html
@@ -32,7 +32,7 @@
 		    <div class="col-md-3 account-nav">
 		    	<ul class="nav navbar-nav">
 		        <li class="dropdown account-block">
-		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+		          <a href="#" class="dropdown-toggle account-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 		          	<div class="account-img">
 		          		<img src="assets/images/upload/user/user-1.jpg" class="acc-image img-circle" alt="myface">
 		          	</div>
