--- a/myface-onface-html/src/views/index.html
+++ b/myface-onface-html/src/views/index.html
@@ -100,7 +100,7 @@
   </div>
   <!--load-more-->
   <div class="full-width load-more">
-	  <button class="btn btn-primary btn-loadmore">Xem thêm các sản phẩm khác </button>
+	  <button class="btn btn-loadmore">Xem thêm các sản phẩm khác </button>
 	</div>
   <!--back-to-top-btn-->
   <div class="back-to-top-btn" style="display: none;">
