--- a/myface-onface-html/src/assets/less/style/block/header.less
+++ b/myface-onface-html/src/assets/less/style/block/header.less
@@ -6,10 +6,14 @@
 	}
 }
 .myfaceshop-logo {
-	width: 136px;
+	width: auto;
+	padding-right: 5px;
 	h1{
+		width: 120px;
 		margin: 0;
-		font-size: 18px;
+		img {
+			width: 100%;
+		}
 	}
 }
 .header-search {
@@ -92,25 +96,35 @@
 		li {
 			&.account-block {
 				a {
-					padding: 0 15px;
+					color: @text-color-1;
+					&:hover,
+					&:focus:hover {
+						color: @primary-color;
+						background-color: transparent;
+					}
+					&:focus {
+						color: @text-color-1;
+						background-color: transparent;
+					}
+					&.account-toggle {
+						padding: 0 15px 0 20px;
+					}
+					&.invoice-tracking {
+					}
 				}
 			}
 			&.cart-block {
 				a {
 					padding: 0 15px;
-				}
-			}
-			> a,
-			.invoice-tracking {
-				color: @text-color-1;
-				&:hover,
-				&:focus:hover {
-					color: @primary-color;
-					background-color: transparent;
-				}
-				&:focus {
-					color: @text-color-1;
-					background-color: transparent;
+					&:hover,
+					&:focus:hover {
+						color: @primary-color;
+						background-color: transparent;
+					}
+					&:focus {
+						color: @text-color-1;
+						background-color: transparent;
+					}
 				}
 			}
 		}
@@ -187,15 +201,15 @@
 }
 .header-row-2 {
 	width: 100%;
-	height: 70px;
+	height: 60px;
 	overflow: hidden;
 	background-color: #f2f2f2;
 }
 .cate-list {
 	.cate-item {
 		> a {
-			padding-top: 8px;
-			padding-bottom: 10px;
+			padding-top: 4px;
+			padding-bottom: 4px;
 			> span {
 				width: 100%;
 				display: block;
