--- a/myface-onface-html/src/views/block/_footer.html
+++ b/myface-onface-html/src/views/block/_footer.html
@@ -11,7 +11,9 @@
             </li>
             <li class="li-item f-title">MyFace Shop là gì?</li>
             <li class="li-item">
-              <p>MyFace Shop là trang Thương mại điện tử và là Cộng đồng mua bán sôi động các sản phảm với giá cả phù hợp cho mọi người</p>
+              <p>MyFace Shop là trang Thương mại điện tử và là Cộng đồng mua bán sôi động các sản phảm với giá cả phù hợp cho mọi người... 
+                <a class="readmore" href="#">Xem thêm</a>
+              </p>
             </li>
             <li class="li-item f-bct">
               <span class="bct"><img class="" src="assets/images/upload/fb/bct.png" alt="myface"></span>
@@ -97,7 +99,7 @@
     </div><!--footer-row-1-->
     <!--footer-row-2-->
     <div class="footer-row-2">
-      <p class="f-address">©2016 - Công ty TNHH Thương mại Điện Tử Modern Life Địa chỉ: P802, C.T Plaza Trường Sơn, P.2, Q. Tân Bình, TP. Hồ Chí Minh. <br/> GP số: 0312952658 do Sở kế hoạch & Đầu tư TP. Hồ Chí Minh cấp ngày 02/10/2014</p>
+      <p class="f-address">©2016 - Công ty TNHH Thương mại Điện Tử Modern Life Địa chỉ: P802, C.T Plaza Trường Sơn, P.2, Q. Tân Bình, TP. Hồ Chí Minh. GP số: 0312952658 do Sở kế hoạch & Đầu tư TP. Hồ Chí Minh cấp ngày 02/10/2014</p>
     </div><!--/.footer-row-2-->
   </div>
 </footer><!--/.footer-->
