--- a/myface-onface-html/src/views/block/_footer.html
+++ b/myface-onface-html/src/views/block/_footer.html
@@ -11,9 +11,9 @@
             </li>
             <li class="li-item f-title">MyFace Shop là gì?</li>
             <li class="li-item">
-              <p>MyFace Shop là trang Thương mại điện tử và là Cộng đồng mua bán sôi động các sản phảm với giá cả phù hợp cho mọi người... 
-                <a class="readmore" href="#">Xem thêm</a>
-              </p>
+              <a class="mf-about" href="#">
+                <p>MyFace Shop là trang Thương mại điện tử và là Cộng đồng mua bán sôi động các sản phảm với giá cả phù hợp cho mọi người... <span class="readmore">Xem thêm</span></p>
+              </a>
             </li>
             <li class="li-item f-bct">
               <span class="bct"><img class="" src="assets/images/upload/fb/bct.png" alt="myface"></span>
