--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -862,18 +862,26 @@ img {
   margin-bottom: 0;
 }
 .myfaceshop-logo {
-  width: auto;
-  padding-right: 5px;
+  width: 135px;
+  float: left;
+  padding-left: 15px;
+  padding-right: 0;
+  margin-top: -4px;
 }
 .myfaceshop-logo h1 {
-  width: 120px;
+  width: 100%;
   margin: 0;
 }
 .myfaceshop-logo h1 img {
   width: 100%;
 }
+.search-nav {
+  width: 66%;
+  float: left;
+  padding: 0 0 0 15px;
+}
 .header-search {
-  width: 748px;
+  width: 100%;
   border: 2px solid #ff5722;
   margin-top: -2px;
   border-radius: 3px;
@@ -942,6 +950,7 @@ img {
   color: #212121;
 }
 .account-nav {
+  width: 260px;
   float: right;
 }
 .account-nav .nav {
@@ -1048,6 +1057,7 @@ img {
   height: 60px;
   overflow: hidden;
   background-color: #f2f2f2;
+  margin-bottom: 20px;
 }
 .cate-list .cate-item > a {
   padding-top: 4px;
@@ -1135,7 +1145,7 @@ img {
   border-right: 1px solid #dfdfdf;
 }
 .navbar-nav > li.promotion-item > a {
-  line-height: 38px;
+  line-height: 27px;
 }
 .navbar-nav > li.promotion-item > a:hover {
   background-color: #c8c8c8;
@@ -1210,7 +1220,7 @@ footer.main-footer .footer-row-2 p {
 }
 footer.main-footer .f-title {
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 17px;
   display: block;
   font-weight: 700;
   font-size: 18px;
@@ -1231,7 +1241,7 @@ footer.main-footer .f-block-2 .li-item > a:hover .f-title {
   color: #ff5722;
 }
 footer.main-footer .f-phone {
-  line-height: 24px;
+  line-height: 21px;
 }
 footer.main-footer .f-bct > span {
   display: inline-block;
@@ -1247,7 +1257,6 @@ footer.main-footer .f-bct > span.bct {
   border-color: #ff5722;
 }
 .readmore {
-  color: #727272;
   text-decoration: underline;
   font-weight: bold;
 }
@@ -1512,13 +1521,20 @@ footer.main-footer .f-bct > span.bct {
   width: 100%;
   height: 100%;
   border-radius: 3px;
-  padding: 10px;
+  padding: 30px;
   position: absolute;
   top: 0;
   left: 0;
   z-index: 1;
   background-color: rgba(255, 255, 255, 0.85);
   color: #212121;
+}
+.m-product-hover .m-product-name {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+.m-product-hover .m-product-description {
+  color: #727272;
 }
 .m-product-hover .price.current {
   font-weight: 600;
@@ -1592,8 +1608,8 @@ footer.main-footer .f-bct > span.bct {
   border-radius: 50%;
 }
 .shop-name .shop-name-text {
-  font-size: 12px;
-  font-weight: normal;
+  font-size: 14px;
+  font-weight: 600;
   line-height: 20px;
 }
 .banner {
@@ -2397,9 +2413,6 @@ footer.main-footer .f-bct > span.bct {
   width: 100%;
   height: 100%;
 }
-.myface-shop header {
-  margin-bottom: 20px;
-}
 .wrap-banner {
   height: 415px;
   margin-bottom: 15px;
@@ -2426,6 +2439,9 @@ footer.main-footer .f-bct > span.bct {
   height: 415px;
   position: relative;
 }
+.banner-1:hover .arrow {
+  opacity: 1;
+}
 .banner-1 .banner-1-inner {
   width: 100%;
   min-height: 100%;
@@ -2444,10 +2460,22 @@ footer.main-footer .f-bct > span.bct {
   border-radius: 0 3px 3px 0;
   opacity: 0;
 }
+.banner-1 .arrow:hover {
+  background-color: rgba(255, 87, 34, 0.7);
+  color: #fff;
+}
+.banner-1 .arrow .icon:before {
+  content: "\f104";
+  font-size: 33px;
+}
 .banner-1 .arrow.arrow-right {
   left: auto;
   right: 0;
   border-radius: 3px 0 0 3px;
+}
+.banner-1 .arrow.arrow-right .icon:before {
+  content: "\f105";
+  margin-left: 8px;
 }
 .banner-2 {
   height: 250px;
