--- a/myface-onface-html/src/assets/less/style/block/header.less
+++ b/myface-onface-html/src/assets/less/style/block/header.less
@@ -6,18 +6,26 @@
 	}
 }
 .myfaceshop-logo {
-	width: auto;
-	padding-right: 5px;
+	width: 135px;
+	float: left;
+	padding-left: 15px;
+	padding-right: 0;
+	margin-top: -4px;
 	h1{
-		width: 120px;
+		width: 100%;
 		margin: 0;
 		img {
 			width: 100%;
 		}
 	}
 }
+.search-nav {
+	width: 66%;
+	float: left;
+	padding: 0 0 0 15px;
+}
 .header-search {
-	width: 748px;
+	width: 100%;
 	border: 2px solid @primary-color;
 	margin-top: -2px;
 	border-radius: @border-radius;
@@ -90,6 +98,7 @@
 	}
 }
 .account-nav {
+	width: 260px;
 	float: right;
 	.nav {
 		float: right;
@@ -183,6 +192,8 @@
 		display: block;
 		position: relative;
 		background: url(../images/icons/cart.png) no-repeat center right;
+		&:hover {
+		}
 	}
 	.cart-number {
 		min-width: 16px;
@@ -204,6 +215,7 @@
 	height: 60px;
 	overflow: hidden;
 	background-color: #f2f2f2;
+	margin-bottom: 20px;
 }
 .cate-list {
 	.cate-item {
@@ -348,7 +360,7 @@
 .navbar-nav > li.promotion-item {
 	border-right: @border;
 	> a {
-		line-height: 38px;
+		line-height: 27px;
 		&:hover {
 			background-color: #c8c8c8;
 		}
