--- a/myface-onface-html/src/assets/less/style/block/m-product-block.less
+++ b/myface-onface-html/src/assets/less/style/block/m-product-block.less
@@ -52,13 +52,20 @@
 	width: 100%;
 	height: 100%;
 	border-radius: @border-radius;
-	padding: 10px;
+	padding: 30px;
 	position: absolute;
 	top: 0;
 	left: 0;
 	z-index: 1;
 	background-color: rgba(255, 255, 255, 0.85);
 	color: @text-color-1;
+	.m-product-name {
+		margin-top: 0;
+		margin-bottom: 10px;
+	}
+	.m-product-description {
+		color: @text-color-2;
+	}
 	.price {
 		&.current {
 			font-weight: 600;
@@ -145,8 +152,8 @@
 		}
 	}
 	.shop-name-text {
-		font-size: 12px;
-		font-weight: normal;
+		font-size: 14px;
+		font-weight: 600;
 		line-height: 20px;
 	}
 }
