--- a/myface-onface-html/src/assets/less/style/page/myface-shop.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-shop.less
@@ -1,9 +1,6 @@
 .myface-shop {
 	width: 100%;
 	height: 100%;
-	header {
-		margin-bottom: 20px;
-	}
 }
 .wrap-banner {
 	height: 415px;
@@ -30,6 +27,11 @@
 .banner-1 {
 	height: 415px;
 	position: relative;
+	&:hover {
+		.arrow {
+			opacity: 1;
+		}
+	}
 	.banner-1-inner {
 		width: 100%;
 		min-height: 100%;
@@ -47,10 +49,26 @@
     border-color: transparent;
     border-radius: 0 3px 3px 0;
     opacity: 0;
+    &:hover {
+    	background-color: rgba(255, 87, 34, 0.7);
+    	color: #fff;
+    }
+    .icon {
+    	&:before {
+	  		content: "\f104";		
+    		font-size: 33px;
+	  	}
+    }
     &.arrow-right {
     	left: auto;
     	right: 0;
     	border-radius: 3px 0 0 3px;
+    	.icon {
+    		&:before {
+		  		content: "\f105";
+		  		margin-left: 8px;
+		  	}
+    	}
     }
 	}
 }
