--- a/myface-onface-html/src/views/block/_header.html
+++ b/myface-onface-html/src/views/block/_header.html
@@ -3,7 +3,7 @@
 	<div class="container header-row-1">
 		<div class="row">
 			<nav class="navbar">
-		    <div class="col-md-2 myfaceshop-logo">
+		    <div class="myfaceshop-logo">
 					<a href="index.html" title="myFace Shop">
 						<h1 class="logo-text">
 							<img class="" src="assets/images/logo/logo.png" alt="myface">	
@@ -11,7 +11,7 @@
 					</a>
 				</div>
 
-		    <div class="col-md-7 search-nav">
+		    <div class="search-nav">
 		      <div class="input-group header-search">
 						<div class="input-group-btn">
 							<select class="selectpicker cate-search">
@@ -29,7 +29,7 @@
 					</div>
 		    </div>
 
-		    <div class="col-md-3 account-nav">
+		    <div class="account-nav">
 		    	<ul class="nav navbar-nav">
 		        <li class="dropdown account-block">
 		          <a href="#" class="dropdown-toggle account-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -60,91 +60,4 @@
 			</nav>
 		</div>
 	</div><!--/.header-row-1-->
-	<!--header-row-2-->
-	<div class="header-row-2">
-		<nav class="container navbar category-nav">
-			<ul class="nav navbar-nav cate-list">
-			  <li class="cate-item cate-1">
-			    <a class="" href="#">
-			    	<span class="cate-icon">
-			    	</span>
-			    	<span class="cate-name">Mỹ phẩm</span>
-			    </a>
-			  </li>
-			  <li class="cate-item cate-2">
-			    <a class="" href="#">
-			    	<span class="cate-icon">
-			    	</span>
-			    	<span class="cate-name">Điện tử</span>
-			    </a>
-			  </li>
-			  <li class="cate-item cate-3">
-			    <a class="" href="#">
-			    	<span class="cate-icon">
-			    	</span>
-			    	<span class="cate-name">Thời trang</span>
-			    </a>
-			  </li>
-			  <li class="cate-item cate-4">
-			    <a class="" href="#">
-			    	<span class="cate-icon">
-			    	</span>
-			    	<span class="cate-name">Gia dụng</span>
-			    </a>
-			  </li>
-			  <li class="cate-item cate-5">
-			    <a class="" href="#">
-			    	<span class="cate-icon">
-			    	</span>
-			    	<span class="cate-name">Sức khỏe</span>
-			    </a>
-			  </li>
-			  <li class="cate-item cate-6">
-			    <a class="" href="#">
-			    	<span class="cate-icon">
-			    	</span>
-			    	<span class="cate-name">Thực phẩm</span>
-			    </a>
-			  </li>
-			  <li class="cate-item cate-7">
-			    <a class="" href="#">
-			    	<span class="cate-icon">
-			    	</span>
-			    	<span class="cate-name">Sách - VPP</span>
-			    </a>
-			  </li>
-			  <li class="cate-item cate-8">
-			    <a class="" href="#">
-			    	<span class="cate-icon">
-			    	</span>
-			    	<span class="cate-name">Mẹ & Bé</span>
-			    </a>
-			  </li>
-			  <li class="cate-item cate-9">
-			    <a class="" href="#">
-			    	<span class="cate-icon">
-			    	</span>
-			    	<span class="cate-name">Đồ chơi</span>
-			    </a>
-			  </li>
-			</ul>
-			<ul class="nav navbar-nav promotion-list">
-        <li class="promotion-item promotion-1">
-        	<a href="#">
-        		<img src="assets/images/upload/pro/pro-1.png" class="" alt="myface">
-        	</a>
-        </li>
-        <li class="promotion-item promotion-2">
-        	<a href="#">
-        		<img src="assets/images/upload/pro/pro-2.png" class="" alt="myface">
-        	</a>
-        </li>
-        <li class="promotion-item promotion-3">
-        	<a href="#">
-        		<img src="assets/images/upload/pro/pro-3.png" class="" alt="myface">
-        	</a>
-        </li>
-      </ul>
-		</nav>
-	</div><!--/.header-row-2-->
 </header>
