--- a/myface-onface-html/src/views/index.html
+++ b/myface-onface-html/src/views/index.html
@@ -1,31 +1,12 @@
 {% extends "layout/_layout-myface-shop.html" %}
 {% block page-container %}
+<!--header-row-2-->
+{% include "block/_header-row-2.html" %}
+<!--/.header-row-2-->
+<!--main-content-->
 <main class="container">
 	<!--wrap-banner-->
-	<div class="wrap-banner">
-		<div class="row">
-			<!--banner-left-->
-			<div class="col-md-9 banner-left">
-				<div class="banner-item banner-1">
-					<button class="arrow arrow-left" aria-label=""><span class="arrow-image"></span></button>
-						<div class="banner-1-inner">
-							<a href="#"><img src="assets/images/upload/banner/banner-2.jpg" alt="myface"></a>
-						</div>
-					<button class="arrow arrow-right" aria-label=""><span class="arrow-image"></span></button>
-				</div>
-			</div><!--/.banner-left-->
-
-			<!--banner-right-->
-			<div class="col-md-3 banner-right">
-				<div class="banner-item banner-2">
-					<a href="#"><img src="assets/images/upload/banner/banner-3.jpg" alt="myface"></a>
-				</div><!--/.banner-2-->
-				<div class="banner-item banner-3">
-					<a href="#"><img src="assets/images/upload/banner/banner-4.jpg" alt="myface"></a>
-				</div><!--/.banner-3-->
-			</div><!--/.banner-right-->
-		</div>
-	</div>
+	{% include "block/_banner.html" %}
 	<!--tabs-bar-->
   <nav class="navbar tabs-bar">
   	<ul class="tabs-menu">
@@ -55,58 +36,8 @@
       </li>
     </ul>
   </nav><!--/.tabs-bar-->
+  <!--product-block-->
   <!--wrap-product-->
-  <div class="row wrap-product">
-	  <ol class="m-product-list">
-	  	{% for x in [1,2,3,4,5,7,8,9,10,11,1,2,3,4,5,7,8,9,10,11,1,2,3,4,5,7,8,9,10,11,1,2,3,4,5,7,8,9,10,11] %}  
-	  	<!--m-product-item-->
-	  	<li class="col-xs-12 col-sm-4 col-md-3 m-product-item">
-	  		<div class="m-product-inner">
-		  		<div class="m-product-info">
-		  			<a class="m-product-link" href="#">
-		  				<figure class="m-product-img">
-								<img class="" src="assets/images/upload/product/product-8.jpg" alt="myface">		
-							</figure>
-							<div class="m-product-hover">
-								<h2 class="m-product-name">Áo thun Jeanswest bêđê hồng</h2>
-								<p class="m-product-description">Áo thun jeanswest màu trắng hồng bêdê. Kiểu dáng đẹp, ôm bó sát người. Đặc biệt bên trong có lớp lưới giúp thoáng mát...</p>
-								<div class="price-block">
-		              <span class="price current">235.000<sup>đ</sup></span>
-		              <span class="price original">325.000<sup>đ</sup></span> 
-		            </div>
-							</div>	
-		  			</a>
-						<ul class="icon-links">
-							<li class="m-buy" href="#"><span class="icon i-buy">123</span></li>
-							<li class="m-view" href="#"><span class="icon i-view">456</span></li>
-							<li class="m-like" href="#"><span class="icon i-like">789</span></li>
-						</ul>
-		  		</div>
-		  		<h2 class="shop-name">
-		  			<a class="shop-name-inner" href="#">
-		  				<span class="shop-img">
-		  					<img src="assets/images/upload/shop-img/user.jpg" alt="myface">
-		  				</span>
-		  				<span class="shop-name-text">Home Venten Korean</span>
-		  			</a>
-		  		</h2>
-		  	</div>
-	  	</li><!--/.m-product-item-->
-	  	{% endfor %}
-	  </ol>
-  </div><!--/.wrap-product-->
-  <!--loading-->
-  <div class="loading">
-  </div>
-  <!--load-more-->
-  <div class="full-width load-more">
-	  <button class="btn btn-loadmore">Xem thêm các sản phẩm khác </button>
-	</div>
-  <!--back-to-top-btn-->
-  <div class="back-to-top-btn" style="display: none;">
-	  <a href="#">
-	  	back to top
-	  </a>
-	</div><!--/.back-to-top-btn-->
+  {% include "block/_m-product-list-block.html" %}
 </main>
 {% endblock %}
