--- a/myface-onface-html/src/views/block/_m-product-block.html
+++ b/myface-onface-html/src/views/block/_m-product-block.html
@@ -21,7 +21,7 @@
 			</ul>
 		</div>
 		<h2 class="shop-name">
-			<a class="shop-name-inner" href="#">
+			<a class="shop-name-inner" href="myface-user-shop.html">
 				<span class="shop-img">
 					<img src="assets/images/upload/shop-img/user.jpg" alt="myface">
 				</span>
