--- a/myface-onface-html/src/views/myface-user-shop.html
+++ b/myface-onface-html/src/views/myface-user-shop.html
@@ -1,6 +1,11 @@
-{% extends "layout/_layout-base.html" %}
+{% extends "layout/_layout-myface-shop.html" %}
 {% block page-container %}
-<main>
-  Myface User's Shop
+<!--header-row-2-->
+<!--/.header-row-2-->
+<!--main-content-->
+<main class="container">
+  <!--product-block-->
+  <!--wrap-product-->
+  {% include "block/_m-product-list-block.html" %}
 </main>
 {% endblock %}
