--- a/myface-onface-html/src/assets/less/style/page/myface-shop.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-shop.less
@@ -1,6 +1,10 @@
 .myface-shop {
 	width: 100%;
 	height: 100%;
+	.header-row-1 {
+		border-color: transparent;
+		margin-bottom: 0;
+	}
 }
 .wrap-banner {
 	height: 415px;
