--- a/myface-onface-html/src/views/block/_header-row-2.html
+++ b/myface-onface-html/src/views/block/_header-row-2.html
@@ -2,63 +2,63 @@
 	<nav class="container navbar category-nav">
 		<ul class="nav navbar-nav cate-list">
 		  <li class="cate-item cate-1">
-		    <a class="" href="#">
+		    <a class="" href="myface-category-1.html">
 		    	<span class="cate-icon">
 		    	</span>
 		    	<span class="cate-name">Mỹ phẩm</span>
 		    </a>
 		  </li>
 		  <li class="cate-item cate-2">
-		    <a class="" href="#">
+		    <a class="" href="myface-category-1.html">
 		    	<span class="cate-icon">
 		    	</span>
 		    	<span class="cate-name">Điện tử</span>
 		    </a>
 		  </li>
 		  <li class="cate-item cate-3">
-		    <a class="" href="#">
+		    <a class="" href="myface-category-1.html">
 		    	<span class="cate-icon">
 		    	</span>
 		    	<span class="cate-name">Thời trang</span>
 		    </a>
 		  </li>
 		  <li class="cate-item cate-4">
-		    <a class="" href="#">
+		    <a class="" href="myface-category-1.html">
 		    	<span class="cate-icon">
 		    	</span>
 		    	<span class="cate-name">Gia dụng</span>
 		    </a>
 		  </li>
 		  <li class="cate-item cate-5">
-		    <a class="" href="#">
+		    <a class="" href="myface-category-1.html">
 		    	<span class="cate-icon">
 		    	</span>
 		    	<span class="cate-name">Sức khỏe</span>
 		    </a>
 		  </li>
 		  <li class="cate-item cate-6">
-		    <a class="" href="#">
+		    <a class="" href="myface-category-1.html">
 		    	<span class="cate-icon">
 		    	</span>
 		    	<span class="cate-name">Thực phẩm</span>
 		    </a>
 		  </li>
 		  <li class="cate-item cate-7">
-		    <a class="" href="#">
+		    <a class="" href="myface-category-1.html">
 		    	<span class="cate-icon">
 		    	</span>
 		    	<span class="cate-name">Sách - VPP</span>
 		    </a>
 		  </li>
 		  <li class="cate-item cate-8">
-		    <a class="" href="#">
+		    <a class="" href="myface-category-1.html">
 		    	<span class="cate-icon">
 		    	</span>
 		    	<span class="cate-name">Mẹ & Bé</span>
 		    </a>
 		  </li>
 		  <li class="cate-item cate-9">
-		    <a class="" href="#">
+		    <a class="" href="myface-category-1.html">
 		    	<span class="cate-icon">
 		    	</span>
 		    	<span class="cate-name">Đồ chơi</span>
