--- a/myface-onface-html/src/views/block/_header.html
+++ b/myface-onface-html/src/views/block/_header.html
@@ -1,6 +1,6 @@
-<header>
+<header class="header-row-1">
 	<!--header-row-1-->
-	<div class="container header-row-1">
+	<div class="container">
 		<div class="row">
 			<nav class="navbar">
 		    <div class="myfaceshop-logo">
