--- a/myface-onface-html/src/views/block/_footer.html
+++ b/myface-onface-html/src/views/block/_footer.html
@@ -9,10 +9,10 @@
             <li class="li-item f-logo">
               <a href="#"><img class="" src="assets/images/logo/logo.png" alt="myface"></a>
             </li>
-            <li class="li-item f-title">MyFace Shop là gì?</li>
+            <li class="li-item f-title">myFace Shop là gì?</li>
             <li class="li-item">
               <a class="mf-about" href="#">
-                <p>MyFace Shop là trang Thương mại điện tử và là Cộng đồng mua bán sôi động các sản phảm với giá cả phù hợp cho mọi người... <span class="readmore">Xem thêm</span></p>
+                <p>myFace Shop là trang Thương mại điện tử và là Cộng đồng mua bán sôi động các sản phảm với giá cả phù hợp cho mọi người... <span class="readmore">Xem thêm</span></p>
               </a>
             </li>
             <li class="li-item f-bct">
@@ -25,7 +25,7 @@
       		<ul class="list-group">
             <li class="li-item f-phone">
               <a href="tel:1900 636 099">
-                Hotline hổ trợ
+                Hotline hỗ trợ
                 <span class="f-title">1900 636 099</span>
                 (08-18h / T2-T7)
               </a>
