--- a/myface-onface-html/src/views/block/_m-product-block.html
+++ b/myface-onface-html/src/views/block/_m-product-block.html
@@ -1,7 +1,7 @@
 <li class="col-xs-12 col-sm-4 col-md-3 m-product-item">
 	<div class="m-product-inner">
 		<div class="m-product-info">
-			<a class="m-product-link" href="#">
+			<a class="m-product-link" href="myface-product-detail.html">
 				<figure class="m-product-img">
 					<img class="" src="assets/images/upload/product/product-8.jpg" alt="myface">		
 				</figure>
@@ -15,9 +15,9 @@
 				</div>	
 			</a>
 			<ul class="icon-links">
-				<li class="m-buy" href="#"><span class="icon i-buy">123</span></li>
-				<li class="m-view" href="#"><span class="icon i-view">456</span></li>
-				<li class="m-like" href="#"><span class="icon i-like">789</span></li>
+				<li class="m-buy"><span class="icon i-buy">123</span></li>
+				<li class="m-view"><span class="icon i-view">456</span></li>
+				<li class="m-like"><span class="icon i-like">789</span></li>
 			</ul>
 		</div>
 		<h2 class="shop-name">
