--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -875,6 +875,7 @@ img {
 .myfaceshop-logo h1 {
   width: 100%;
   margin: 0;
+  font-size: 20px;
 }
 .myfaceshop-logo h1 img {
   width: 100%;
@@ -2575,12 +2576,15 @@ footer.main-footer .f-bct > span.bct {
   float: left;
 }
 .catebar .cate-list {
-  width: auto;
+  width: 100%;
   height: 90px;
+  text-align: center;
   overflow: hidden;
 }
 .catebar .cate-item {
   margin-right: 20px;
+  display: inline-block;
+  float: none;
 }
 .catebar .cate-item > a {
   width: 90px;
@@ -2592,6 +2596,26 @@ footer.main-footer .f-bct > span.bct {
 .filterbar .tabs-menu {
   text-align: left;
   margin-left: -12px;
+  float: left;
+}
+.filterbar .tabs-menu.filter-menu {
+  margin-left: 30px;
+}
+.filterbar .filter-property {
+  float: right;
+  margin-right: -12px;
+}
+.tab-single a {
+  font-weight: normal;
+}
+.tab-single a:after {
+  display: none;
+}
+.tab-label > label {
+  float: left;
+  padding: 15px 0;
+  margin-bottom: 0;
+  line-height: 20px;
 }
 select.bs-select-hidden,
 select.selectpicker {
