--- a/myface-onface-html/src/assets/less/style/page/myface-cate.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-cate.less
@@ -8,12 +8,15 @@
 }
 .catebar {
 	.cate-list {
-		width: auto;
+		width: 100%;
 		height: 90px;
+		text-align: center;
 		overflow: hidden;
 	}
 	.cate-item {
 		margin-right: 20px;
+		display: inline-block;
+		float: none;
 		> a {
 			width: 90px;
 			height: 90px;
@@ -27,5 +30,29 @@
 	.tabs-menu {
 		text-align: left;
 		margin-left: -12px;
+		float: left;
+		&.filter-menu {
+			margin-left: 30px;
+		}
+	}
+	.filter-property {
+		float: right;
+		margin-right: -12px;
+	}
+}
+.tab-single {
+	a {
+		font-weight: normal;
+		&:after {
+			display: none;
+		}
+	}
+}
+.tab-label {
+	> label {
+		float: left;
+		padding: 15px 0;
+		margin-bottom: 0;
+		line-height: 20px;
 	}
 }
