--- a/myface-onface-html/src/views/myface-category-1.html
+++ b/myface-onface-html/src/views/myface-category-1.html
@@ -7,37 +7,7 @@
 <!--main-content-->
 <main class="container">
 	<!--filterbar-->
-	<div class="filterbar">
-		<!--tabs-bar-->
-	  <nav class="navbar tabs-bar">
-	  	<ul class="tabs-menu">
-	      <li class="tab-item">
-	      	<a href="#">Nổi bật</a>
-	      	<ul class="dropdown-menu tab-sub">
-	      		<li><a href="#">Nổi bật 1</a></li>
-	      		<li><a href="#">Nổi bật 2</a></li>
-	      		<li><a href="#">Nổi bật 3</a></li>
-	      	</ul>
-	      </li>
-	      <li class="tab-item">
-	      	<a href="#">Sản phẩm</a>
-	      	<ul class="dropdown-menu tab-sub">
-	      		<li><a href="#">Sản phẩm 1</a></li>
-	      		<li><a href="#">Sản phẩm 2</a></li>
-	      		<li><a href="#">Sản phẩm 3</a></li>
-	      	</ul>
-	      </li>
-	      <li class="tab-item">
-	      	<a href="#">Gần đây</a>
-	      	<ul class="dropdown-menu tab-sub">
-	      		<li><a href="#">Gần đây 1</a></li>
-	      		<li><a href="#">Gần đây 2</a></li>
-	      		<li><a href="#">Gần đây 3</a></li>
-	      	</ul>
-	      </li>
-	    </ul>
-	  </nav><!--/.tabs-bar-->
-  </div>
+	{% include "block/_filter-bar.html" %}
   <!--product-block-->
   <!--wrap-product-->
   {% include "block/_m-product-list-block.html" %}
