myface-user-shop

--- a/myface-onface-html/src/assets/less/style/block/header.less
+++ b/myface-onface-html/src/assets/less/style/block/header.less
@@ -149,7 +149,7 @@
 	float: left;
 	margin-right: 8px;
 	border-radius: 50%;
-	background-color: #f2f2f2;
+	background-color: @bg-color-3;
 	img {
 		width: 100%;
 		min-height: 100%;
@@ -217,7 +217,7 @@
 	width: 100%;
 	height: 60px;
 	overflow: hidden;
-	background-color: #f2f2f2;
+	background-color: @bg-color-3;
 	margin-bottom: 20px;
 }
 .cate-list {
