--- a/myface-onface-html/src/assets/less/style/style.less
+++ b/myface-onface-html/src/assets/less/style/style.less
@@ -37,6 +37,7 @@
 @import "page/cart.less";
 @import "page/myface-shop.less";
 @import "page/myface-cate.less";
+@import "page/myface-user.less";
 //Plugins
 //--------
 @import "plugin/bootstrap-select.less";
