--- a/myface-onface-html/src/views/layout/_layout-myface-user.html
+++ b/myface-onface-html/src/views/layout/_layout-myface-user.html
@@ -1,5 +1,5 @@
 {% extends "_layout-base.html" %}
-{% block page-containerclass%}myface-shop{% endblock %}
+{% block page-containerclass%}{% endblock %}
 <!--header-->
 {% block header%}
 {% include "../block/_header-user-shop.html" %}
