--- a/myface-onface-html/src/assets/css/style.css
+++ b/myface-onface-html/src/assets/css/style.css
@@ -995,7 +995,7 @@ img {
   float: left;
   margin-right: 8px;
   border-radius: 50%;
-  background-color: #f2f2f2;
+  background-color: #f0f1f3;
 }
 .account-img img {
   width: 100%;
@@ -1061,7 +1061,7 @@ img {
   width: 100%;
   height: 60px;
   overflow: hidden;
-  background-color: #f2f2f2;
+  background-color: #f0f1f3;
   margin-bottom: 20px;
 }
 .cate-list .cate-item > a {
@@ -2616,6 +2616,20 @@ footer.main-footer .f-bct > span.bct {
   padding: 15px 0;
   margin-bottom: 0;
   line-height: 20px;
+}
+.tab-label > a {
+  font-weight: 600;
+}
+.tab-label > a:after {
+  display: none;
+}
+.tab-span {
+  font-weight: normal;
+}
+.usershop-bar .tabs-bar {
+  border-bottom-color: transparent;
+  margin-bottom: 0;
+  margin-top: -10px;
 }
 select.bs-select-hidden,
 select.selectpicker {
