--- a/myface-onface-html/src/assets/less/style/page/myface-cate.less
+++ b/myface-onface-html/src/assets/less/style/page/myface-cate.less
@@ -55,4 +55,13 @@
 		margin-bottom: 0;
 		line-height: 20px;
 	}
+	> a {
+		font-weight: 600;
+		&:after {
+			display: none;
+		}
+	}
+}
+.tab-span {
+	font-weight: normal;
 }
